--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -774,6 +774,10 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .line-clamp-1 {
   overflow: hidden;
   display: -webkit-box;
