--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -871,6 +871,14 @@ video {
   height: 3rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
 .min-h-\[300px\] {
   min-height: 300px;
 }
@@ -983,6 +991,18 @@ video {
   width: 100vw;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
 .min-w-\[16px\] {
   min-width: 16px;
 }
@@ -1021,6 +1041,10 @@ video {
 
 .max-w-6xl {
   max-width: 72rem;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 
 .flex-none {
@@ -1628,12 +1652,20 @@ video {
   padding-top: 2rem;
 }
 
+.pt-4 {
+  padding-top: 1rem;
+}
+
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .align-top {
@@ -1841,6 +1873,16 @@ video {
 .text-\[\#f69c0a\] {
   --tw-text-opacity: 1;
   color: rgb(246 156 10 / var(--tw-text-opacity));
+}
+
+.text-\[\#4d3107\] {
+  --tw-text-opacity: 1;
+  color: rgb(77 49 7 / var(--tw-text-opacity));
+}
+
+.text-green-800 {
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 
 .underline {
